# rdump

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
crates/rdump/: Cargo.toml
crates/rdump-mcp/: Cargo.toml
crates/rdump-mcp/examples/: try_repo.rs
crates/rdump-mcp/src/: docs.rs  languages.rs  lib.rs  main.rs  search.rs  types.rs
crates/rdump-mcp/tests/: doc_sync.rs  runtime_helpers.rs  schema_snapshots.rs  stdio_e2e.rs
crates/rdump/.claude/: settings.local.json
crates/rdump/.rdump/: config.toml
crates/rdump/examples/: async_search.rs  generate_docs.rs
crates/rdump/src/: async_api.rs  backend.rs  content.rs  engine.rs  evaluator.rs  execution.rs  formatter.rs  lib.rs  main.rs  planner.rs  request.rs  rql.pest
crates/rdump/src/commands/: config.rs  lang.rs  mod.rs  query.rs  search.rs
crates/rdump/src/formatter/: raw.rs  report.rs  shared.rs
crates/rdump/src/predicates/: contains.rs  ext.rs  helpers.rs  in_path.rs  mod.rs  modified.rs  name.rs  path.rs  size.rs
crates/rdump/src/predicates/code_aware/: cache.rs  execution.rs  mod.rs
crates/rdump/src/predicates/code_aware/profiles/: cpp.rs  css.rs  elixir.rs  go.rs  mod.rs  php.rs  ruby.rs  rust.rs  sql.rs  swift.rs  typescript.rs  zig.rs
crates/rdump/tests/: advanced_logic.rs  api_exports.rs  async_api.rs  cli.rs  complex_queries.rs  contract_surfaces.rs  coverage_edge_cases.rs  cpp_search.rs  csharp_search.rs  doc_drift.rs  doc_queries_search.rs  docs_test_cases.rs  elixir_search.rs  formatter.rs  generated_docs.rs  go_search.rs  golden_cli.rs  help_drift.rs  html_search.rs  hunks_format_test.rs  ignore.rs  library_api.rs  lua_search.rs  macos_debug.rs  matches_predicate.rs  modified_predicate.rs  name_predicate_logic.rs  path_predicate.rs  php_search.rs  python_search.rs  query_config_cli.rs  react_comprehensive_search.rs  ruby_search.rs  rust_search_traits.rs  scala_search.rs  schema_snapshots.rs  search_convenience.rs  semantic_precision.rs  semantic_wildcard.rs  swift_search.rs  (+2 more)
crates/rdump/tests/fixtures/bash_project/: main.sh  util.sh
crates/rdump/tests/fixtures/c_project/src/: bad.c  main.c
crates/rdump/tests/fixtures/cpp_project/: main.cpp  util.hpp
crates/rdump/tests/fixtures/csharp_project/: Program.cs
crates/rdump/tests/fixtures/edge_cases/: file with spaces.rs  many_functions.rs  only_comments.rs  unicode_名前.py
crates/rdump/tests/fixtures/elixir_project/lib/: demo.ex
crates/rdump/tests/fixtures/html_project/: index.html
crates/rdump/tests/fixtures/lua_project/: main.lua  util.lua
crates/rdump/tests/fixtures/malformed/: invalid_utf8.txt  syntax_error.py  syntax_error.rs  syntax_error.ts  truncated.rs
crates/rdump/tests/fixtures/mixed_project/src/: Button.jsx  lib.rs  main.rs
crates/rdump/tests/fixtures/php_project/: helper.php
crates/rdump/tests/fixtures/python_project/: helper.py  models.py  utils.py
crates/rdump/tests/fixtures/react_project/src/: App.tsx  UserCard.tsx  logger.js
crates/rdump/tests/fixtures/rust_project/: README.md
crates/rdump/tests/fixtures/scala_project/: Main.scala
crates/rdump/tests/fixtures/scala_project/utils/: Helper.scala
crates/rdump/tests/fixtures/sql_generic/: schema.sql
crates/rdump/tests/fixtures/swift_project/: main.swift
rdump/: Cargo.toml  README.md
rdump-mcp/: Cargo.toml  README.md
rdump-mcp/examples/: try_repo.rs
rdump-mcp/src/: docs.rs  languages.rs  lib.rs  limits.rs  responses.rs  search.rs  stdio.rs  types.rs
rdump-mcp/tests/: doc_sync.rs  schema_snapshots.rs  stdio_e2e.rs
rdump/.rdump/: config.toml
rdump/examples/: basic_search.rs  streaming_search.rs
rdump/src/: async_api.rs  config.rs  content.rs  evaluator.rs  formatter.rs  lib.rs  limits.rs  main.rs  parser.rs  request.rs  support_matrix.rs
rdump/src/commands/: lang.rs  preset.rs  search.rs
rdump/src/formatter/: raw.rs
rdump/src/predicates/: helpers.rs  in_path.rs  matches.rs  mod.rs  path.rs
rdump/src/predicates/code_aware/: mod.rs  selection.rs
rdump/src/predicates/code_aware/profiles/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  elixir.rs  haskell.rs  html.rs  java.rs  javascript.rs  lua.rs  mod.rs  ocaml.rs  python.rs  react.rs  ruby.rs  rust.rs  scala.rs  swift.rs  zig.rs
rdump/tests/: advanced_logic.rs  api_exports.rs  bash_search.rs  c_search.rs  cli.rs  common.rs  complex_queries.rs  contains_predicate.rs  contract_surfaces.rs  coverage_edge_cases.rs  cpp_search.rs  csharp_search.rs  css_search.rs  doc_drift.rs  doc_queries_search.rs  elixir_search.rs  extended_cli.rs  filesystem_edge_cases.rs  formatter.rs  fuzzish_parser.rs  generated_docs.rs  go_search.rs  haskell_search.rs  help_drift.rs  highlight_perf.rs  html_search.rs  ignore.rs  java_search.rs  js_ts_search.rs  library_api.rs  lua_search.rs  matches_predicate.rs  modified_predicate.rs  name_predicate_logic.rs  ocaml_search.rs  path_predicate.rs  perf_smoke.rs  php_search.rs  python_search.rs  react_comprehensive_search.rs  (+15 more)
rdump/tests/data/: doc_queries.txt
rdump/tests/fixtures/: MANIFEST.md
rdump/tests/fixtures/c_project/src/: util.c  util.h
rdump/tests/fixtures/csharp_project/: Helper.cs
rdump/tests/fixtures/css_project/: main.css
rdump/tests/fixtures/edge_cases/: UPPERCASE.RS  deeply_nested.rs  file-with-dashes.rs
rdump/tests/fixtures/haskell_project/: Main.hs
rdump/tests/fixtures/malformed/: binary_content.rs  mismatched_braces.rs
rdump/tests/fixtures/mixed_project/: README.md
rdump/tests/fixtures/mixed_project/src/: log_utils.ts  macros.rs  main.go  useAuth.ts
rdump/tests/fixtures/mixed_project/src/main/java/com/example/: Application.java
rdump/tests/fixtures/ocaml_project/: main.ml
rdump/tests/fixtures/php_project/: main.php
rdump/tests/fixtures/react_project/src/: useFetch.ts
rdump/tests/fixtures/ruby_project/: main.rb
rdump/tests/fixtures/ruby_project/utils/: helper.rb
rdump/tests/fixtures/sql_mysql/: schema.sql
rdump/tests/fixtures/sql_postgres/: schema.sql
rdump/tests/fixtures/sql_sqlite/: schema.sql
rdump/tests/fixtures/zig_project/: main.zig
(+147 files in other folders)
