[package]
name = "rdump"
version = "0.1.6"
edition = "2021"
description = "A fast, expressive, and language-aware file search tool."
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/almaclaine/rdump"
readme = "README.md"
keywords = ["search", "cli", "file", "tool", "code-aware"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
ignore = "0.4.22"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
pest = "2.7.10"
pest_derive = "2.7.10"
lazy_static = "1.4.0"
tempfile = "3.10.1" # Version from dev-dependencies was newer, consolidated here.
glob = "0.3.1"
dirs = "5.0.1"
toml = "0.8.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19.0" # Replaced lazy_static
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-javascript = "0.21.0"
tree-sitter-typescript = "0.21.0"
tree-sitter-go = "0.21.0"
tree-sitter-java = "0.21.0"
syntect = "5.2.0"
dunce = "1.0.4"
globset = "0.4.10"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tree-sitter-rust = "0.21.0"
