[package]
name = "rdump"
version = "0.1.7"
edition = "2021"
description = "A fast, expressive, and language-aware file search tool."
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/almaclaine/rdump"
readme = "README.md"
keywords = ["search", "cli", "file", "tool", "code-aware"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
anyhow = "1.0.100"
ignore = "0.4.25"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
pest = "2.8.1"
pest_derive = "2.8.1"
lazy_static = "1.4.0"
tempfile = "3.10.1" # Version from dev-dependencies was newer, consolidated here.
glob = "0.3.1"
dirs = "6.0.0"
toml = "0.9.8"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.20.0" # Replaced lazy_static
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
syntect = "5.3.0"
dunce = "1.0.4"
globset = "0.4.15"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tree-sitter-rust = "0.24.0"
filetime = "0.2"
tempfile = "3.10"
