[package]
name = "rdump-mcp"
version = "0.1.0"
edition = "2021"

description = "MCP server for rdump SDK"
license = "MIT"
repository = "https://github.com/almaclaine/rdump"

[dependencies]
rdump = { version = "0.1.8", path = "../rdump" }
rdump-contracts = { path = "../rdump-contracts" }
turbomcp = { version = "3.0.1", default-features = false, features = ["minimal"] }
turbomcp-server = { version = "3.0.1", default-features = false, features = ["stdio"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "io-util", "process"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "1.2"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
turbomcp-client = { version = "3.0.1", default-features = false, features = ["stdio"] }
turbomcp-transport = { version = "3.0.1", default-features = false, features = ["stdio"] }
turbomcp-protocol = { version = "3.0.1", default-features = false }
