[package]
name = "rdump"
version = "0.1.8"
edition = "2021"
description = "A fast, expressive, and language-aware file search tool."
authors = ["rdump contributors"]
license = "MIT"
repository = "https://github.com/almaclaine/rdump"
readme = "README.md"
keywords = ["search", "cli", "file", "tool", "code-aware"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["cli"]
cli = ["dep:clap"]
async = ["dep:tokio", "dep:tokio-stream", "dep:futures"]

[dependencies]
rdump-contracts = { path = "../rdump-contracts" }
clap = { version = "4.5.60", features = ["derive"], optional = true }
anyhow = "1.0.102"
ignore = "0.4.25"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
pest = "2.8.6"
pest_derive = "2.8.6"
lazy_static = "1.5.0"
tempfile = "3.27.0" # Version from dev-dependencies was newer, consolidated here.
glob = "0.3.3"
dirs = "6.0.0"
toml = "1.0.6"
chrono = { version = "0.4.44", features = ["serde"] }
once_cell = "1.21.3" # Replaced lazy_static
tree-sitter = "0.26.6"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-swift = "0.7.1"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-scala = "0.24.0"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-lua = "0.5.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-ocaml = "0.24.2"
tree-sitter-zig = "1.1.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-sequel = "0.3.11"
syntect = "5.3.0"
dunce = "1.0.5"
globset = "0.4.18"
tokio = { version = "1.50.0", features = ["fs", "sync", "rt", "macros"], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
futures = { version = "0.3.32", optional = true }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tree-sitter-rust = "0.24.0"
filetime = "0.2"
tempfile = "3.27"
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"

[[example]]
name = "async_search"
required-features = ["async"]

[[bin]]
name = "rdump"
path = "src/main.rs"
required-features = ["cli"]
